--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,14 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "prettier/prettier": [
+    "error",
+    {
+      "singleQuote": true,
+      "parser": "flow",
+      "usePrettierrc": false,
+      "endOfLine":"auto"
+    }
+  ]
 }
 
